--- a/index.html
+++ b/index.html
@@ -41,7 +41,10 @@
                 </li>
             </ul>
         </div>
-        <div class="mode-container"></div>
+        <div class="mode-container">
+            <i class="fa-solid fa-moon"></i>
+            <p>Dark mode</p>
+        </div>
     </div>
     <!-- navigation section -->
 </body>
