--- a/index.html
+++ b/index.html
@@ -47,5 +47,18 @@
         </div>
     </div>
     <!-- navigation section -->
+    <!-- logo & search field -->
+    <div class="logo-search-container">
+        <h2>LOGO.</h2>
+        <div class="input-container">
+            <input type="text" placeholder="Search here">
+            <i class="fa-solid fa-magnifying-glass"></i>
+        </div>
+        <div class="account-manager">
+            <p>Login</p>
+            <i class="fa-solid fa-user"></i>
+        </div>
+    </div>
+    <!-- logo & search field -->
 </body>
 </html>
