--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <!-- link fontawesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- link fontawesome -->
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <title>Cambodian-Trip</title>
 </head>
 <body>
@@ -60,5 +61,12 @@
         </div>
     </div>
     <!-- logo & search field -->
+    <div data-aos="fade-up" data-aos-duration="1000" class="hero-container">
+
+    </div>
 </body>
+<script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+<script>
+   AOS.init();
+</script>
 </html>
