Finished Hero Image

--- a/index.html
+++ b/index.html
@@ -62,7 +62,11 @@
     </div>
     <!-- logo & search field -->
     <div data-aos="fade-up" data-aos-duration="1000" class="hero-container">
-
+        <div class="hero-text-container" data-aos="fade-right" data-aos-duration="2000">
+            <h1>Explore the best place in Cambodia</h1>
+            <p>Enchant your journey , planning and explore the best <br> place in Cambodia.</p>
+            <button type="button" class="btn-explore">Explore now...</button>
+        </div>
     </div>
 </body>
 <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
