Finished Hero Image

--- a/index.html
+++ b/index.html
@@ -67,6 +67,11 @@
             <p>Enchant your journey , planning and explore the best <br> place in Cambodia.</p>
             <button type="button" class="btn-explore">Explore now...</button>
         </div>
+        <div class="image-card-container" data-aos="fade-left" data-aos-duration="2000">
+            <img src="images/Image-Card-1.png" alt="Image-Card-1.png">
+            <img src="images/Image-Card-2.png" alt="Image-Card-2.png">
+            <img src="images/Image-Card-3.png" alt="Image-Card-3.png">
+        </div>
     </div>
 </body>
 <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
